--- a/TODO
+++ b/TODO
@@ -1,12 +1,20 @@
+ * BE8108 gearbox v2
+   * Machine front housing
+     * Machine back side
+
+   * Make another temporary back housing for a r3.1 board
+
+   * Get center shaft
+
+   * design new absolute position sense board
+
  * power dist
-   * get script to set boot pins properly
    * Test CAN
+   * get script to set boot pins properly
    * Implement basic firmware
 
  * test new battery stud
 
- * When rotor and stator come in, measure, then get the necessary
-   pieces machined to test it
  * Port controller to STM32G4
    * FD-CAN
    * PWM
@@ -30,12 +38,6 @@
  * C++ moteus tool
    * Implement calibration
 
- * BE8108 gearbox v2
-   * Make planet input on pocket NC
-   * finish CAD for gbx v2
-   * Devise strategy for front housing, back housing, and outer
-     housing on pocket NC
-   * design new absolute position sense board
 
  * Hard-fault or assert needs to reset the device and latch a fault
  * Calibration goes forever if the magnet is axially magnetized or
@@ -58,10 +60,6 @@
      procedure (it seems it may currently depend on the unwrapped
      position scale too)
 
- * Make stm32f466_async_uart turn around the receive pin faster, so
-   that the bootloader doesn't need a delay hack in it and we can have
-   faster RTT with devices
-
  * Add a "brake" mode that just shorts the terminals all to ground
 
  * Make moteus_tool servo auto-detection more robust
@@ -79,6 +77,25 @@ Code cleanup
  * get link time optimization working
  * Try to figure out a way so that we can actually bind callbacks without
    having to shrink all over the place?
+
+DONE 2019-11-07
+ * Worked on machining front housing more
+ * Finished up draft design of mk2 servo
+ * Printed up new mounting plate and new op2 bracket to move the part
+   closer to the mill... ran out of z travel
+
+DONE 2019-11-06
+ * Started machining front housing on pocket nc
+ * Machined op1 bracket from al
+
+DONE 2019-11-05
+ * pre-machined parts for another front housing and bored out for more
+   the other
+
+DONE 2019-11-04
+ * Finished 3x more planet input
+ * Received rotor and stator samples
+ * Designed toolpaths for front housing
 
 DONE 2019-11-01
  * Manually machined 1x outer housing to correct ID/OD and height
