--- a/hw/gearbox_v2/TODO
+++ b/hw/gearbox_v2/TODO
@@ -1,24 +1,18 @@
  * outer housing
-   * spacing between front and back housing and studs differs between
-     front and back side
 
  * front housing
    * output bearing needs to have continuous contact, i.e. no weight
      cutouts
-   * gear needs to have less cutout
+   * gear needs to have slightly less cutout or continuous
    * Update to do bulk of material removal on AA CNC bridgeport
 
  * back housing
    * maybe could lower the controller board by a mm
-   * need a wire cover
 
  * back cover
    * machine
 
- * Prepare another back housing stock
- * Prepare another front housing stock
-
- * Do weight reduction to planet input and output
+ * Do weight reduction to planet output
 
 DONE 2019-11-18
  * mk2 r3.1 version:
